Architecture revamp + log fix

--- a/JADI/JADI.vcxproj
+++ b/JADI/JADI.vcxproj
@@ -11,15 +11,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\JADI\Log.h" />
+    <ClInclude Include="src\JADI\Core\Log.h" />
     <ClInclude Include="src\JADI.h" />
-    <ClInclude Include="src\JADI\Application.h" />
-    <ClInclude Include="src\JADI\Core.h" />
-    <ClInclude Include="src\JADI\EntryPoint.h" />
+    <ClInclude Include="src\JADI\Core\Application.h" />
+    <ClInclude Include="src\JADI\Core\Core.h" />
+    <ClInclude Include="src\JADI\Core\EntryPoint.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\JADI\Log.cpp" />
-    <ClCompile Include="src\JADI\Application.cpp" />
+    <ClCompile Include="src\JADI\Core\Log.cpp" />
+    <ClCompile Include="src\JADI\Core\Application.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
