--- a/JADI/JADI.vcxproj
+++ b/JADI/JADI.vcxproj
@@ -11,14 +11,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\JADI\Core\Log.h" />
+    <ClInclude Include="src\JADI\Debug\Log.h" />
     <ClInclude Include="src\JADI.h" />
     <ClInclude Include="src\JADI\Core\Application.h" />
     <ClInclude Include="src\JADI\Core\Core.h" />
     <ClInclude Include="src\JADI\Core\EntryPoint.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\JADI\Core\Log.cpp" />
+    <ClCompile Include="src\JADI\Debug\Log.cpp" />
     <ClCompile Include="src\JADI\Core\Application.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
