--- a/JADI/JADI.vcxproj.filters
+++ b/JADI/JADI.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="src\JADI.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="src\JADI\Core\EntryPoint.h">
+    <ClInclude Include="src\JADI\Core\main.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="src\JADI\Debug\Log.h">
