--- a/JADI/JADI.vcxproj
+++ b/JADI/JADI.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\JADI\Renderer\Render.h" />
-    <ClInclude Include="src\JADI\Math\Rendering\Projection.h" />
+    <ClInclude Include="src\JADI\Math\Projection.h" />
     <ClInclude Include="src\JADI\Debug\Log.h" />
     <ClInclude Include="src\JADI.h" />
     <ClInclude Include="src\JADI\Core\Application.h" />
@@ -21,7 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\JADI\Renderer\Render.cpp" />
-    <ClCompile Include="src\JADI\Math\Rendering\Projection.cpp" />
+    <ClCompile Include="src\JADI\Math\Projection.cpp" />
     <ClCompile Include="src\JADI\Debug\Log.cpp" />
     <ClCompile Include="src\JADI\Core\Application.cpp" />
   </ItemGroup>
