--- a/JADI/JADI.vcxproj
+++ b/JADI/JADI.vcxproj
@@ -74,7 +74,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>JADI_PLATFORM_WINDOWS;JADI_BUILD_DLL;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)JADI\vendor\spdlog\include;$(SolutionDir)JADI\vendor\glfw\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)JADI\vendor\spdlog\include;$(SolutionDir)JADI\vendor\glfw\include;$(SolutionDir)JADI\vendor\glad\include;</AdditionalIncludeDirectories>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
@@ -92,7 +92,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>JADI_PLATFORM_WINDOWS;JADI_BUILD_DLL;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)JADI\vendor\spdlog\include;$(SolutionDir)JADI\vendor\glfw\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)JADI\vendor\spdlog\include;$(SolutionDir)JADI\vendor\glfw\include;$(SolutionDir)JADI\vendor\glad\include;</AdditionalIncludeDirectories>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
