Impletend shaders, fixed render, re-organised struct
TWO FIX TO DO :
 - Memory leak on the render (no shutdown func)
 - VerticeWorld buffer seems to be counted with 0 element

--- a/JADI/JADI.vcxproj
+++ b/JADI/JADI.vcxproj
@@ -26,6 +26,8 @@
     <ClCompile Include="src\JADI\Math\Projection.cpp" />
     <ClCompile Include="src\JADI\Debug\Log.cpp" />
     <ClCompile Include="src\JADI\Core\Application.cpp" />
+    <ClCompile Include="src\JADI\Renderer\Shader.cpp" />
+    <ClCompile Include="vendor\glad\src\glad.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
