--- a/JADI/JADI.vcxproj.filters
+++ b/JADI/JADI.vcxproj.filters
@@ -56,5 +56,11 @@
     <ClCompile Include="src\JADI\Math\Chunk.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="vendor\glad\src\glad.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="src\JADI\Renderer\Shader.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
